# advent-of-code-2016

./: Cargo.toml  new-day.sh  template.rs
day01/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
problems/: Cargo.toml
problems/src/: day01.rs  day02.rs  day03.rs  day04.rs
utils/: Cargo.toml
utils/src/: aoc.rs  coords.rs  lib.rs
